// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly a failed delivery 1`] = `
<React.Fragment>
  <AlertErrorIcon
    className="text-text-top"
  />
  <span
    className="spacer-left display-inline-flex-center"
  >
    <DateTimeFormatter
      date="12.02.2018"
    />
    <ButtonIcon
      className="button-small little-spacer-left"
      onClick={[Function]}
    >
      <BulletListIcon />
    </ButtonIcon>
  </span>
</React.Fragment>
`;

exports[`should render correctly a success delivery 1`] = `
<React.Fragment>
  <AlertSuccessIcon
    className="text-text-top"
  />
  <span
    className="spacer-left display-inline-flex-center"
  >
    <DateTimeFormatter
      date="12.02.2018"
    />
    <ButtonIcon
      className="button-small little-spacer-left"
      onClick={[Function]}
    >
      <BulletListIcon />
    </ButtonIcon>
  </span>
</React.Fragment>
`;

exports[`should render correctly when no latest delivery 1`] = `
<span>
  webhooks.last_execution.none
</span>
`;
